# PW-m9-hw-scrapy-git

./: authors.json  main.py  models.py  pyproject.toml  quotes.json
quotes_scraper/quotes_scraper/spiders/: main.py
