[tool.poetry]
name = "pw-m9-hw-scrapy"
version = "0.1.0"
description = ""
authors = ["Yevgeniy Python <itpython2023@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mongoengine = "^0.28.2"
scrapy = "^2.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
